# auto_deploy

./: app.py  config.json  pyproject.toml
